layout page for / route

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Records</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+    <title>Платівки</title>
+
+    <link rel="icon" type="image/ico" href="assets/vinyl.ico" />
+    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="build/bundle.css" />
+
+    <script defer src="build/bundle.js"></script>
   </head>
-  <body>
-    <h1>Front</h1>
-  </body>
+
+  <body></body>
 </html>
